sdks/swift/Sources/CGoudEngine/include/goud_engine.h

/**
 * Sentinel value for an invalid entity ID.
 */
#define GOUD_INVALID_ENTITY_ID UINT64_MAX
/**
 * Opaque identifier for an engine context.
 */
typedef struct GoudContextId {
    uint64_t _0;
} GoudContextId;
/**
 * FFI-safe result type for returning success/failure status across the FFI boundary.
 */
typedef struct GoudResult {
    /**
     * The error code. `SUCCESS` (0) on success, error code on failure.
     */
    GoudErrorCode code;
    /**
     * True if the operation succeeded, false otherwise.
     */
    bool success;
} GoudResult;
/**
 * Sentinel value representing an invalid context ID.
 */
#define GOUD_INVALID_CONTEXT_ID (GoudContextId){ ._0 = UINT64_MAX }
/**
 * Base code for context/initialization errors.
 */
#define CONTEXT_ERROR_BASE 1
/**
 * Base code for ECS entity errors.
 */
#define ENTITY_ERROR_BASE 300
/**
 * Base code for internal/unexpected errors.
 */
#define INTERNAL_ERROR_BASE 900
/**
 * Creates a new engine context.
 */
struct GoudContextId goud_context_create(void);
/**
 * Destroys an engine context, freeing all associated resources.
 */
bool goud_context_destroy(struct GoudContextId context_id);
/**
 * Checks if a context ID is valid.
 */
bool goud_context_is_valid(struct GoudContextId context_id);
/**
 * Spawns a new empty entity in the world.
 */
uint64_t goud_entity_spawn_empty(struct GoudContextId context_id);
/**
 * Spawns multiple empty entities in a single batch.
 */
uint32_t goud_entity_spawn_batch(struct GoudContextId context_id, uint32_t count, uint64_t *out_entities);
/**
 * Despawns an entity, removing it and all its components from the world.
 */
GoudResult goud_entity_despawn(struct GoudContextId context_id, uint64_t entity_id);
/**
 * Despawns multiple entities in a single batch.
 */
uint32_t goud_entity_despawn_batch(struct GoudContextId context_id, const uint64_t *entity_ids, uint32_t count);
/**
 * Checks if an entity is currently alive in the world.
 */
bool goud_entity_is_alive(struct GoudContextId context_id, uint64_t entity_id);
/**
 * Gets the total number of alive entities in the world.
 */
uint32_t goud_entity_count(struct GoudContextId context_id);