sdks/csharp/NativeMethods.g.cs

// <auto-generated>
// This code is generated by csbindgen.
// DON'T CHANGE THIS DIRECTLY.
// </auto-generated>
#pragma warning disable CS8500
#pragma warning disable CS8981
using System;
using System.Runtime.InteropServices;


namespace CsBindgen
{
    public static unsafe partial class NativeMethods
    {
        const string __DllName = "libgoud_engine";



        /// <summary>
        ///  Creates a new engine context.
        ///
        ///  Returns a unique context ID that must be passed to all subsequent FFI calls.
        ///  On failure, returns `GOUD_INVALID_CONTEXT_ID` and sets the last error.
        ///
        ///  # Thread Safety
        ///
        ///  This function is thread-safe and can be called from any thread.
        ///  However, the returned context must be used from a single thread.
        ///
        ///  # Error Codes
        ///
        ///  - `INTERNAL_ERROR_BASE + 0` (InternalError) - Failed to lock registry or
        ///    create context
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_context_create", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern GoudContextId goud_context_create();

        /// <summary>
        ///  Destroys an engine context, freeing all associated resources.
        ///
        ///  After calling this, the context ID becomes invalid and should not be used.
        ///  All entities, components, and resources in the context are destroyed.
        ///
        ///  # Arguments
        ///
        ///  * `context_id` - The context to destroy
        ///
        ///  # Returns
        ///
        ///  `true` if the context was successfully destroyed, `false` on error.
        ///
        ///  # Thread Safety
        ///
        ///  This function is thread-safe and can be called from any thread.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_context_destroy", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_context_destroy(GoudContextId context_id);

        /// <summary>
        ///  Checks if a context ID is valid.
        ///
        ///  A context is valid if it was created and has not been destroyed.
        ///
        ///  # Arguments
        ///
        ///  * `context_id` - The context ID to check
        ///
        ///  # Returns
        ///
        ///  `true` if the context is valid, `false` otherwise.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_context_is_valid", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_context_is_valid(GoudContextId context_id);

        /// <summary>
        ///  Spawns a new empty entity in the world.
        ///
        ///  The entity is created with no components attached. Components can be
        ///  added later using `goud_entity_insert_component()`.
        ///
        ///  # Arguments
        ///
        ///  * `context_id` - The context to spawn the entity in
        ///
        ///  # Returns
        ///
        ///  The entity ID on success, or `GOUD_INVALID_ENTITY_ID` on failure.
        ///  Call `goud_get_last_error_message()` for error details.
        ///
        ///  # Error Codes
        ///
        ///  - `CONTEXT_ERROR_BASE + 3` (InvalidContext) - Invalid context ID
        ///  - `INTERNAL_ERROR_BASE + 0` (InternalError) - Unexpected error during spawn
        ///
        ///  # Thread Safety
        ///
        ///  Must be called from the thread that owns the context.
        ///
        ///  # Example (C#)
        ///
        ///  ```csharp
        ///  var entity = goud_entity_spawn_empty(contextId);
        ///  if (entity == GOUD_INVALID_ENTITY_ID) {
        ///      var error = goud_get_last_error_message();
        ///      Console.WriteLine($"Failed to spawn entity: {error}");
        ///  }
        ///  ```
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_entity_spawn_empty", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern ulong goud_entity_spawn_empty(GoudContextId context_id);

        /// <summary>
        ///  Spawns multiple empty entities in a single batch.
        ///
        ///  This is more efficient than calling `goud_entity_spawn_empty()` multiple
        ///  times because it pre-allocates slots and avoids repeated locking.
        ///
        ///  # Arguments
        ///
        ///  * `context_id` - The context to spawn entities in
        ///  * `count` - Number of entities to spawn
        ///  * `out_entities` - Output buffer to write entity IDs (must hold at least `count` u64s)
        ///
        ///  # Returns
        ///
        ///  The number of entities successfully spawned (may be less than `count` on partial failure).
        ///
        ///  # Safety
        ///
        ///  Caller must ensure `out_entities` points to valid memory with capacity for `count` u64 values.
        ///
        ///  # Error Codes
        ///
        ///  - `CONTEXT_ERROR_BASE + 3` (InvalidContext) - Invalid context ID
        ///  - `INTERNAL_ERROR_BASE + 0` (InternalError) - Unexpected error during spawn
        ///
        ///  # Example (C#)
        ///
        ///  ```csharp
        ///  ulong[] entities = new ulong[100];
        ///  int spawned = goud_entity_spawn_batch(contextId, 100, entities);
        ///  Console.WriteLine($"Spawned {spawned} entities");
        ///  ```
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_entity_spawn_batch", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint goud_entity_spawn_batch(GoudContextId context_id, uint count, ulong* out_entities);

        /// <summary>
        ///  Despawns an entity, removing it and all its components from the world.
        ///
        ///  After despawning, the entity ID becomes invalid and should not be used.
        ///  Any components attached to the entity are also removed.
        ///
        ///  # Arguments
        ///
        ///  * `context_id` - The context containing the entity
        ///  * `entity_id` - The entity to despawn
        ///
        ///  # Returns
        ///
        ///  A result indicating success or failure. Check `result.success`.
        ///
        ///  # Error Codes
        ///
        ///  - `CONTEXT_ERROR_BASE + 3` (InvalidContext) - Invalid context ID
        ///  - `ENTITY_ERROR_BASE + 0` (EntityNotFound) - Entity does not exist or is already despawned
        ///
        ///  # Example (C#)
        ///
        ///  ```csharp
        ///  var result = goud_entity_despawn(contextId, entity);
        ///  if (!result.success) {
        ///      Console.WriteLine($"Failed to despawn entity: code {result.code}");
        ///  }
        ///  ```
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_entity_despawn", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern Result goud_entity_despawn(GoudContextId context_id, ulong entity_id);

        /// <summary>
        ///  Despawns multiple entities in a single batch.
        ///
        ///  This is more efficient than calling `goud_entity_despawn()` multiple times.
        ///  Invalid or already-despawned entities are skipped.
        ///
        ///  # Arguments
        ///
        ///  * `context_id` - The context containing the entities
        ///  * `entity_ids` - Pointer to array of entity IDs to despawn
        ///  * `count` - Number of entities in the array
        ///
        ///  # Returns
        ///
        ///  The number of entities successfully despawned.
        ///
        ///  # Safety
        ///
        ///  Caller must ensure `entity_ids` points to valid memory with at least `count` u64 values.
        ///
        ///  # Example (C#)
        ///
        ///  ```csharp
        ///  ulong[] entities = { entity1, entity2, entity3 };
        ///  int despawned = goud_entity_despawn_batch(contextId, entities, 3);
        ///  Console.WriteLine($"Despawned {despawned} entities");
        ///  ```
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_entity_despawn_batch", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint goud_entity_despawn_batch(GoudContextId context_id, ulong* entity_ids, uint count);

        /// <summary>
        ///  Checks if an entity is currently alive in the world.
        ///
        ///  An entity is considered alive if:
        ///  - It was spawned and not yet despawned
        ///  - Its generation matches the current generation for that slot
        ///
        ///  # Arguments
        ///
        ///  * `context_id` - The context to check
        ///  * `entity_id` - The entity to check
        ///
        ///  # Returns
        ///
        ///  `true` if the entity is alive, `false` otherwise.
        ///
        ///  # Note
        ///
        ///  This function returns `false` on error (invalid context or entity).
        ///  Use `goud_get_last_error_code()` to distinguish errors from dead entities.
        ///
        ///  # Example (C#)
        ///
        ///  ```csharp
        ///  if (goud_entity_is_alive(contextId, entity)) {
        ///      Console.WriteLine("Entity is alive");
        ///  } else {
        ///      Console.WriteLine("Entity is dead or invalid");
        ///  }
        ///  ```
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_entity_is_alive", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_entity_is_alive(GoudContextId context_id, ulong entity_id);

        /// <summary>
        ///  Gets the total number of alive entities in the world.
        ///
        ///  # Arguments
        ///
        ///  * `context_id` - The context to query
        ///
        ///  # Returns
        ///
        ///  The count of alive entities, or 0 on error.
        ///
        ///  # Example (C#)
        ///
        ///  ```csharp
        ///  int count = goud_entity_count(contextId);
        ///  Console.WriteLine($"World has {count} entities");
        ///  ```
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_entity_count", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint goud_entity_count(GoudContextId context_id);
